src/app/navigation/navigation.component.css
.fa-bars-staggered {
  position: absolute;
  left: 10px;
  font-size: 40px;
  color: var(--secondary);
  cursor: pointer;
}

.small-header {
  position: relative;
  width: 100%;
  height: 60px;
  display: flex;
  justify-content: center;
  align-items: center;
  border-bottom: 3px solid var(--main);
  display: none;
}

.title {
  font-size: 30px;
  color: var(--secondary);
}

header {
  position: fixed;
  top: 0;
  height: 100%;
  width: 250px;
  border-right: 3px solid var(--main);
  padding: 30px 25px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  background-color: var(--primary);
  transform-origin: left;
}

nav, nav > div {
  display: flex;
  flex-direction: column;
}

a {
  text-decoration: none;
}

.link, .log-out {
  width: 100%;
  height: 50px;
  margin-top: 30px;
  padding: 10px;
  background-color: var(--secondary);
  color: var(--primary);
  font-size: 25px;
  border: none;
  border-radius: 5px;
  box-shadow: 0 0 5px rgba(0, 0, 0, 25%);
  transition: all 0.3s;
}

.link:hover, .log-out:hover, .active {
  background-color: var(--main);
  color: #F7F9FC;
  cursor: pointer;
}

.sub-link {
  margin-top: 15px;
  font-size: 25px;
  display: flex;
  align-items: center;
  color: var(--secondary);
  cursor: pointer;
}

label {
  cursor: pointer;
}

input[type="radio"] {
  appearance: none;
  width: 20px;
  height: 20px;
  margin-right: 10px;
  margin-left: 20px;
  border: 2px solid var(--main);
  border-radius: 50px;
  background-color: var(--primary);
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
}

input[type="radio"]::before {
  content: '';
  width: 70%;
  height: 70%;
  border-radius: 50px;
}

input[type="radio"]:checked::before {
  background-color: var(--main);
}

.fa-xmark {
  position: absolute;
  font-size: 50px;
  color: var(--secondary);
  top: 5px;
  right: 5px;
  cursor: pointer;
  display: none;
}

/* CHANGE THEME BUTTON */
.btn {
  width: 100%;
  height: 50px;
  padding: 5px;
  display: flex;
  align-items: center;
  position: relative;
  border-radius: 50px;
  background-color: var(--secondary);
  box-shadow: 0 0 5px rgba(0, 0, 0, 25%);
  cursor: pointer;
  transition: all 0.3s;
}

.indicator {
  position: absolute;
  width: 50%;
  height: 80%;
  border-radius: 50px;
  box-shadow: 0 0 5px rgba(0, 0, 0, 25%);
}

.indicator.move-right {
  animation: move-right 0.5s !important;
}

.indicator.move-left {
  animation: move-left 0.5s;
  transform: translateX(0em);
}

.indicator.dark {
  animation: transform 0s;
  transform: translateX(calc(100% - 10px));
}

.icon-container {
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--primary);
  border-radius: 50px;
}

.icon {
  color: var(--secondary);
  font-size: 35px;
}

.icon.spin-right {
  animation: spin-right 0.5s;
}

.icon.spin-left {
  animation: spin-left 0.5s;
}

@keyframes move-right {
  from {
    transform: translateX(0px);
  }
  to {
    transform: translateX(calc(100% - 10px));
  }
}

@keyframes move-left {
  from {
    transform: translateX(calc(100% - 10px));
  }
  to {
    transform: translateX(0px);
  }
}

@keyframes spin-right {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@keyframes spin-left {
  from {
    transform: rotate(360deg);
  }
  to {
    transform: rotate(0deg);
  }
}

/* MEDIA QUERIES */

@media (width <= 1479px) {
  header {
    width: 200px;
  }
  
  .link, .log-out {
    height: 45px;
    font-size: 20px;
  }
  
  .sub-link {
    font-size: 20px;
  }
  
  input[type="radio"] {
    width: 18px;
    height: 18px;
  }

  /* CHANGE THEME BUTTON */
  .btn {
    height: 45px;
  }

  .icon {
    color: var(--secondary);
    font-size: 30px;
  }
}

@media (width <= 1279px) {
  .fa-xmark {
    display: block;
  }

  .small-header {
    display: flex;
  }
}

